issue #6: add support for downloading without deletion
This change adds good support for downloading without deletection, while still
allowing for polling to continue to know that it does not need to download this
file again in the future, even if the file is moved out of the downloads directory
(as I feel may often be the case).  Removing the '-k' will remove these files from
put.io without downloading again.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-# putio-sync pip requirements
-#
-# Sync by doing (in a virtualenv)
+# Can be install by doing
 # pip install -r requirements.txt
-# 
-requests
-putio.py
-progressbar
+requests==2.2.0
+putio.py==2.1.0
+progressbar==2.2
+sqlalchemy==0.9.1
