webif: initial web interface support via flask/flask-restless
A basic web interface is present that can show some information out
of the database.  Unfortunately, flask-restless doesn't seem to want
to include DateTime fields, so I may end up ditching that and just
generating the history server side and using polling with something
simpler for the download queue.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ requests==2.2.0
 putio.py==2.1.0
 progressbar==2.2
 sqlalchemy==0.9.1
-tvrenamr==3.4.11
+flask==0.10.1
+flask-restless==0.12.1
+flask-restful==0.2.11
+Flask-SQLAlchemy==1.0
