--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include requirements.txt
 include LICENSE
-recursive-include putiosync/webif/static *.html *.css *.js
+recursive-include putiosync/webif/static *.html *.css *.js *.png
 recursive-include putiosync/webif/templates *.html
